<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- 이메일 입력 -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp" />

    <!-- 비밀번호 입력 -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:background="@android:drawable/edit_text"
        android:padding="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp" />

    <!-- 로그인 버튼 -->
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_login"
        android:backgroundTint="#6200EE"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_marginTop="24dp" />

    <!-- 회원가입 버튼 -->
    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_sign"
        android:textSize="16sp"
        android:layout_marginTop="16dp" />

</LinearLayout>
